<resources>
    <string name="app_name">Taller Operaciones Geometricas</string>
    <string name="menuPrincipal">Menu Principal</string>
    <string name="title_activity_cilindro">Cilindro</string>
    <string name="title_activity_circulo">Circulo</string>
    <string name="areas">Area</string>
    <string name="cilindro">Cilindro</string>
    <string name="radio">Digite Radio</string>
    <string name="altura">Digite Altura</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="circulo">Circulo</string>
    <string name="cono">Cono</string>
    <string name="valorLados">Digite El Valor Del Lado</string>
    <string name="esfera">Esfera</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="base">Digite Base</string>
    <string name="triangulo">Triangulo</string>
    <string name="volumen">Volumen</string>
    <string name="cubo">Cubo</string>
    <string name="resultados">Resultados</string>
    <string name="numero">N°</string>
    <string name="operacion">Operacion</string>
    <string name="datos">Datos</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="operacionesRealizadas">Operaciones Realizadas</string>
    <string name="operacion1">Área del Cuadrado</string>
    <string name="operacion2">Área del Rectángulo</string>
    <string name="operacion3">Área del Triángulo</string>
    <string name="operacion4">Área del Circulo</string>
    <string name="operacion5">Volumen de Esfera</string>
    <string name="operacion6">Volumen de Cilindro</string>
    <string name="operacion7">Volumen de Cono</string>
    <string name="operacion8">Volumen de Cubo</string>
    <string name="error">Digite Datos</string>
    <string-array name="lstOpciones">
        <item>@string/areas</item>
        <item>@string/volumen</item>
        <item>@string/operacionesRealizadas</item>
    </string-array>
    <string-array name="lstAreas">
        <item>@string/cuadrado</item>
        <item>@string/rectangulo</item>
        <item>@string/triangulo</item>
        <item>@string/circulo</item>
    </string-array>
    <string-array name="lstVolumen">
        <item>@string/esfera</item>
        <item>@string/cilindro</item>
        <item>@string/cono</item>
        <item>@string/cubo</item>
    </string-array>
</resources>
